Fixed beerslist sizing issue that was squishing the item contents on initial render

--- a/client/src/scss/BeersList.module.scss
+++ b/client/src/scss/BeersList.module.scss
@@ -22,11 +22,11 @@
 .Item {
   width: 95%;
   height: 6rem;
-  margin: 0.5rem 0 0.5rem 0;
-  border-radius: 0.5rem;
+  margin: 0.25rem 0 0.25rem 0;
+  // border-radius: 0.5rem;
   background: #f0d3d7;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   cursor: pointer;
   transition: $transition-time;
@@ -39,7 +39,7 @@
   transition: $transition-time;
 }
 .NameContainer {
-  width: 100%;
+  width: 150px;
   display: flex;
   flex-direction: column;
   margin-left: 1rem;
@@ -70,10 +70,8 @@
   display: none;
 }
 .CheckIcon {
-  font-size: 2rem;
+  font-size: 2.5rem;
   height: 100%;
   width: 100%;
-  // margin-left: 0.5rem;
-  margin-right: 1rem;
   color: white;
 }
